Tmux tmux tmux.

--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -65,7 +65,7 @@ set -g pane-border-style fg="$color_grey",bg="$color_background"
 
 # status line
 set -g status-justify left
-set -g status-style fg="$color_white",bg="$color_background"
+set -g status-style fg="$color_white",bg="$color_black_light"
 set -g status-interval 1
 set -g status-position top
 set -g status-left ""
@@ -80,11 +80,11 @@ set -g message-command-style bg=black,fg=blue
 setw -g mode-style bg="$color_green",fg="$color_black"
 
 # window status
-setw -g window-status-current-style fg="$color_green"
-setw -g window-status-current-format "#I#[fg=$color_grey]:#[fg=$color_magenta]#W#[fg=$color_red]#F"
+setw -g window-status-current-style fg="$color_yellow"
+setw -g window-status-current-format "#I#[fg=$color_grey]:#[fg=$color_magenta]#W#[fg=$color_green]#F"
 
 setw -g window-status-style fg="$color_grey"
-setw -g window-status-format "#I#[fg=$color_grey]:#[fg=$color_blue]#W#[fg=$color_red]#F"
+setw -g window-status-format "#I#[fg=$color_grey]:#[fg=$color_blue]#W#[fg=$color_green]#F"
 
 setw -g window-status-bell-style fg="$color_red_light",bg="$color_black_light"
 
