--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -60,8 +60,8 @@ color_white_light="colour15"
 color_grey="colour8"
 
 # panes
-set -g pane-active-border-style fg="$color_blue",bg="$color_background"
-set -g pane-border-style fg="$color_grey",bg="$color_background"
+set -g pane-active-border-style fg="$color_blue"
+set -g pane-border-style fg="$color_grey"
 
 # status line
 set -g status-justify left
