--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -40,9 +40,8 @@ run -b '~/.tmux/plugins/tpm/tpm'
 
 # Visual tweaks
 
-color_background="#1e1d40"
+color_background="colour0"
 color_black="colour234"
-color_black_light="colour17"
 color_red="colour1"
 color_red_light="colour9"
 color_green="colour2"
@@ -65,7 +64,7 @@ set -g pane-border-style fg="$color_grey"
 
 # status line
 set -g status-justify left
-set -g status-style fg="$color_white",bg="$color_black_light"
+set -g status-style fg="$color_white",bg="$color_black"
 set -g status-interval 1
 set -g status-position bottom
 set -g status-left " "
