--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -66,7 +66,7 @@ set -g pane-border-style fg="$color_grey"
 set -g status-justify left
 set -g status-style fg="$color_white",bg="$color_black"
 set -g status-interval 1
-set -g status-position bottom
+set -g status-position top
 set -g status-left " "
 set -g status-right "#[fg=$color_red_light]#S #[fg=$color_blue_light]${USER}#[fg=$color_cyan]@#[fg=$color_yellow]#H #[fg=$color_grey]%H:%M "
 set -g status-right-length 200
