--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -40,7 +40,7 @@ run -b '~/.tmux/plugins/tpm/tpm'
 
 # Visual tweaks
 
-color_background="colour0"
+color_background="colour235"
 color_black="colour234"
 color_red="colour1"
 color_red_light="colour9"
@@ -64,7 +64,7 @@ set -g pane-border-style fg="$color_grey"
 
 # status line
 set -g status-justify left
-set -g status-style fg="$color_white",bg="$color_black"
+set -g status-style fg="$color_white",bg="$color_background"
 set -g status-interval 1
 set -g status-position top
 set -g status-left " "
@@ -85,6 +85,6 @@ setw -g window-status-current-format "#I#[fg=$color_grey]:#[fg=$color_magenta]#W
 setw -g window-status-style fg="$color_grey"
 setw -g window-status-format "#I#[fg=$color_grey]:#[fg=$color_blue]#W#[fg=$color_green]#F"
 
-setw -g window-status-bell-style fg="$color_red_light",bg="$color_black_light"
+setw -g window-status-bell-style fg="$color_red_light",bg="$color_black"
 
 set -g message-style fg="$color_background",bg="$color_magenta",bold
