Update starship and nvim (Haskell logo and set wrap!).

--- a/archlinux/.config/starship.toml
+++ b/archlinux/.config/starship.toml
@@ -9,7 +9,7 @@ truncation_length = 8
 style = "bold magenta"
 
 [character]
-symbol = "λ"
+symbol = ""
 vicmd_symbol = ""
 style_success = "blue"
 style_failure = "magenta"
