--- a/archlinux/.config/nvim/coc-settings.json
+++ b/archlinux/.config/nvim/coc-settings.json
@@ -1,6 +1,48 @@
 {
+  "list.insertMappings": {
+    "<C-n>": "normal:t",
+    "<C-p>": "normal:s",
+  },
+  "suggest.enablePreview": true,
+  "suggest.echodocSupport": true,
+  "suggest.completionItemKindLabels": {
+    "keyword": "\uf1de",
+    "variable": "\ue79b",
+    "value": "\uf89f",
+    "operator": "\u03a8",
+    "function": "\u0192",
+    "reference": "\ufa46",
+    "constant": "\uf8fe",
+    "method": "\uf09a",
+    "struct": "\ufb44",
+    "class": "\uf0e8",
+    "interface": "\uf417",
+    "text": "\ue612",
+    "enum": "\uf435",
+    "enumMember": "\uf02b",
+    "module": "\uf40d",
+    "color": "\ue22b",
+    "property": "\ue624",
+    "field": "\uf9be",
+    "unit": "\uf475",
+    "event": "\ufacd",
+    "file": "\uf723",
+    "folder": "\uf114",
+    "snippet": "\ue60b",
+    "typeParameter": "\uf728",
+    "default": "\uf29c"
+  },
+  "diagnostic.virtualText": true,
+  "diagnostic.errorSign": "▶",
+  "diagnostic.infoSign": "▶",
+  "diagnostic.hintign": "▶",
+  "diagnostic.refreshOnInsertMode": true,
+  "diagnostic.refreshAfterSave": true,
+  "codeLens.enable": true,
+  "coc.preferences.currentFunctionSymbolAutoUpdate": true,
+  "coc.preferences.formatOnInsertLeave": true,
   "languageserver": {
-   "clangd": {
+    "clangd": {
       "command": "clangd",
       "args": ["--background-index"],
       "rootPatterns": ["compile_flags.txt", "compile_commands.json", ".vim/", ".git/", ".hg/"],
