Update coc.nvim setup.

--- a/archlinux/.config/nvim/coc-settings.json
+++ b/archlinux/.config/nvim/coc-settings.json
@@ -40,13 +40,5 @@
   "diagnostic.refreshAfterSave": true,
   "codeLens.enable": true,
   "coc.preferences.currentFunctionSymbolAutoUpdate": true,
-  "coc.preferences.formatOnInsertLeave": true,
-  "languageserver": {
-    "clangd": {
-      "command": "clangd",
-      "args": ["--background-index"],
-      "rootPatterns": ["compile_flags.txt", "compile_commands.json", ".vim/", ".git/", ".hg/"],
-      "filetypes": ["c", "cpp", "objc", "objcpp"]
-    }
-  }
+  "coc.preferences.formatOnInsertLeave": true
 }
