--- a/archlinux/.config/compton.conf
+++ b/archlinux/.config/compton.conf
@@ -8,7 +8,7 @@ blur-kern = "3x3box";
 blur-method = "kawase";
 blur-strength = 6;
 
-shadow = true;
+shadow = false;
 no-dock-shadow = true;
 
 fading = true;
