--- a/archlinux/.config/i3/config
+++ b/archlinux/.config/i3/config
@@ -158,7 +158,7 @@ default_floating_border pixel 1
 
 title_align center
 
-hide_edge_borders both
+#hide_edge_borders both
 
 workspace_auto_back_and_forth yes
 
