--- a/archlinux/.config/polybar/config
+++ b/archlinux/.config/polybar/config
@@ -83,6 +83,45 @@ tray-padding = 2
 cursor-click = pointer
 cursor-scroll = ns-resize
 
+[bar/external]
+monitor = HDMI-0
+width = 100%
+height = 26
+radius = 0.0
+fixed-center = true
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+line-size = 0
+line-color = #000
+
+border-size = 0
+border-color = ${colors.color0}
+
+padding = 0
+
+module-margin = 2
+
+font-0 = Cantarell:style=Bold:pixelsize=12;2
+font-1 = Font Awesome 5 Free Solid:style=Solid:pixelsize=14;3
+
+modules-left = i3
+modules-center = xwindow
+modules-right = hostname pulseaudio date
+
+tray-position = right
+tray-padding = 2
+
+;wm-restack = i3
+;override-redirect = true
+
+;scroll-up = i3wm-wsnext
+;scroll-down = i3wm-wsprev
+
+cursor-click = pointer
+cursor-scroll = ns-resize
+
 [module/xwindow]
 type = internal/xwindow
 label = %title%
@@ -94,6 +133,7 @@ format = <label-state> <label-mode>
 index-sort = true
 wrapping-scroll = false
 strip-wsnumbers = true
+pin-workspaces = true
 
 label-focused = %name%
 label-focused-foreground = ${colors.foreground}
@@ -116,19 +156,6 @@ label-urgent = %name%
 label-urgent-foreground = ${colors.color7}
 label-urgent-background = ${colors.color1}
 label-urgent-padding = 4
-
-[module/mpd]
-type = internal/mpd
-format-online = <label-song>  <icon-prev> <icon-stop> <toggle> <icon-next>
-
-icon-prev = 
-icon-stop = 
-icon-play = 
-icon-pause = 
-icon-next = 
-
-label-song-maxlen = 25
-label-song-ellipsis = true
 
 [module/date]
 type = internal/date
@@ -172,48 +199,6 @@ ramp-0 = 
 ramp-1 = 
 ramp-2 = 
 ramp-foreground = ${colors.foreground}
-
-[module/powermenu]
-type = custom/menu
-
-expand-right = true
-
-format-spacing = 1
-
-label-open = 
-label-open-foreground = ${colors.color2}
-label-close = 
-label-close-foreground = ${colors.color8}
-label-separator = |
-label-separator-foreground = ${colors.color8}
-
-menu-0-0 = 
-menu-0-0-foreground = ${colors.color2}
-menu-0-0-exec = menu-open-1
-menu-0-1 = 
-menu-0-1-foreground = ${colors.color1}
-menu-0-1-exec = menu-open-2
-menu-0-2 = 
-menu-0-2-foreground = ${colors.color5}
-menu-0-2-exec = menu-open-3
-
-menu-1-0 = 
-menu-1-0-exec = menu-open-0
-menu-1-1 = 
-menu-1-1-foreground = ${colors.color2}
-menu-1-1-exec = systemctl reboot
-
-menu-2-0 = 
-menu-2-0-foreground = ${colors.color1}
-menu-2-0-exec = systemctl poweroff
-menu-2-1 = 
-menu-2-1-exec = menu-open-0
-
-menu-3-0 = 
-menu-3-0-exec = menu-open-0
-menu-3-1 = 
-menu-3-1-foreground = ${colors.color5}
-menu-3-1-exec = systemctl suspend
 
 [module/hostname]
 type = custom/text
