--- a/archlinux/.config/i3/config
+++ b/archlinux/.config/i3/config
@@ -160,7 +160,7 @@ title_align center
 
 #hide_edge_borders both
 
-workspace_auto_back_and_forth yes
+workspace_auto_back_and_forth false
 
 exec --no-startup-id compton
 exec --no-startup-id sh ~/.fehbg
