--- a/archlinux/.config/compton.conf
+++ b/archlinux/.config/compton.conf
@@ -15,3 +15,7 @@ fading = true;
 
 fade-in-step = 0.06;
 fade-out-step = 0.06;
+
+opacity-rule = [
+  "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+];
