--- a/archlinux/.config/polybar/config
+++ b/archlinux/.config/polybar/config
@@ -64,8 +64,8 @@ padding = 0
 
 module-margin = 2
 
-font-0 = Cantarell:style=Bold:pixelsize=12;2
-font-1 = Font Awesome 5 Free Solid:style=Solid:pixelsize=14;3
+font-0 = Cantarell:style=Bold:pixelsize=13;2
+font-1 = Font Awesome 5 Free Solid:style=Solid:pixelsize=13;3
 
 modules-left = i3
 modules-center = xwindow
@@ -132,7 +132,7 @@ type = internal/i3
 format = <label-state> <label-mode>
 index-sort = true
 wrapping-scroll = false
-strip-wsnumbers = true
+strip-wsnumbers = false
 pin-workspaces = true
 
 label-focused = %name%
