--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -32,6 +32,7 @@
     "typeParameter": "\uf728",
     "default": "\uf29c"
   },
+  "diagnostic.highlightOffset": 100,
   "diagnostic.virtualText": false,
   "diagnostic.errorSign": "",
   "diagnostic.infoSign": "",
@@ -40,6 +41,8 @@
   "diagnostic.refreshOnInsertMode": true,
   "diagnostic.refreshAfterSave": true,
   "codeLens.enable": true,
+  "list.nextKeymap": "<C-t>",
+  "list.previousKeymap": "<C-s>",
   "coc.preferences.currentFunctionSymbolAutoUpdate": true,
   "coc.preferences.formatOnInsertLeave": true,
   "flow.pathToFlow": "/home/phaazon/dev/ledger/ledger-live-common/node_modules/.bin/flow",
